tests/compiler/errors/05-wrong-argument-count.jsa
// jastat-summary: Error on wrong number of function arguments
// jastat: mode=compiler, capture=stderr

function add(a: i32, b: i32): i32 {
    return a + b;
}

let result = add(5);  // Wrong argument count
